# referential

./: CHANGELOG.md  Cargo.toml  README.md  Readme.md
.github/workflows/: rust.yml
referential/: Cargo.toml
referential/src/: lib.rs  test.rs
referential_macros/: Cargo.toml
referential_macros/src/: lib.rs
referential_tests/: Cargo.toml
referential_tests/src/: lib.rs
referential_tests/src/failing/: circular.rs  circular.stderr  circular_indirect.rs  circular_indirect.stderr
src/: lib.rs
