[package]
name = "referential"
version = "0.1.0"
authors = ["Hugo van der Wijst <hugo@wij.st>"]
edition = "2018"
repository = ""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
referential_macros = { version = "=0.1.0", path = "../referential_macros" }
stable_deref_trait = "1.2"

[dev-dependencies]
