[package]
name = "referential"
version = "0.1.0"
authors = ["Hugo van der Wijst <hugo+crates@wij.st>"]
edition = "2018"
rust-version = "1.56.0"
description = "A way to create self-referential structs."
readme = "../README.md"
repository = "https://github.com/hugwijst/referential/"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
referential_macros = { version = "=0.1.0", path = "../referential_macros" }
stable_deref_trait = "1.2"

[dev-dependencies]
