[package]
name = "referential_tests"
version = "0.1.0"
authors = ["Hugo van der Wijst <hugo+crates@wij.st>"]
edition = "2018"
rust-version = "1.56.0"
description = "Tests for [`referential`] crate."
repository = "https://github.com/hugwijst/referential/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
referential = { version = "=0.1.0", path = "../referential" }

[dev-dependencies]
trybuild = "1.0"

[features]
test-readme = []
